--- a/index.html
+++ b/index.html
@@ -29,7 +29,16 @@
 
 <body>
 
- <?php include('test.php') ?>
+    <?php
+
+    $myfile = fopen("hej.txt", "r") or die("Unable to open file!");
+    // Output one line until end-of-file
+    while(!feof($myfile)) {
+    echo fgets($myfile) . "<br>";
+    }
+    fclose($myfile);
+
+    ?>
 
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
