--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -42,7 +42,7 @@
         <div class="row" >
             <div class="col-md-6">
 
-                 <img class="img-responsive" class="imageCat" src="image1.jpg" alt="" >
+                 <img class="img-responsive" id="imageCat" src="image1.jpg" alt="" >
 
             </div>
             <div class="col-md-6" style="border-style:none;" >
