--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Business Frontpage - Start Bootstrap Template</title>
+    <title>Kattappstrof</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -42,17 +42,19 @@
         <div class="row" >
             <div class="col-md-6">
 
-                 <img class="img-responsive" id="imageCat" src="image1.jpg" alt="" >
+                 <img class="img-responsive" id="imageCat" src="image11.jpg" alt="" >
 
             </div>
             <div class="col-md-6" style="border-style:none;" >
 
             <div style="static">
-                  <img class="img-position-top" src="moln.png" alt="">
+                <a href="http://www.smhi.se/#ort=2688368,Norrk%C3%B6ping,Norrk%C3%B6ping,Sverige,58.6/16.183332">  <img class="img-position-top" src="moln.png" alt=""> </a>
 
                  <h2 class="date" >2015-09-05 21:37  </h2>
 
-                 <p class="message" >Mjau! Jag vill in det är kallt ute  </p>
+                 <p class="message" >Alltså seriöst, jag gick ju inte ut för att du
+                                    </br> inte skulle släppa in mig igen. 
+                                    <br> Jag fryser snart svansen av mig. #mjau</p>
 
                  <img class="img-responsive" class="img-position" src="css/bubble.png" alt="bubbla">
 
@@ -63,14 +65,104 @@
         </div>
         <!-- /.row -->
 
-        <div class="row">
-            <div class="col-md-7">
+       <div class="container">
 
-                 <img class="img-responsive" src="Roligakatter.jpg" alt="">
+        <div class="row" >
+            <div class="col-md-6">
+
+                 <img class="img-responsive" id="imageCat" src="image2.jpg" alt="" >
 
             </div>
-            <div class="col-md-5">
-                <h2>Katt</h2>
+            <div class="col-md-6" style="border-style:none;" >
+
+            <div style="static">
+             <a href="http://www.smhi.se/#ort=2688368,Norrk%C3%B6ping,Norrk%C3%B6ping,Sverige,58.6/16.183332">   <img class="img-position-top" src="Icon/solen1.png" alt=""> </a>
+
+                 <h2 class="date" >2015-09-05 07:12  </h2>
+
+                 <p class="message" >Jag har varit ute för länge i solen,<br> & nu vill jag komma in, öppna! <br>
+
+                                    All värme är för mycket! #mjau  </p>
+
+                 <img class="img-responsive" class="img-position" src="css/bubble.png" alt="bubbla">
+
+            </div>
+
+
+            </div>
+        </div>
+
+         <div class="container">
+
+        <div class="row" >
+            <div class="col-md-6">
+
+                 <img class="img-responsive" id="imageCat" src="image12.jpg" alt="" >
+
+            </div>
+            <div class="col-md-6" style="border-style:none;" >
+
+            <div style="static">
+          <a href="http://www.smhi.se/#ort=2688368,Norrk%C3%B6ping,Norrk%C3%B6ping,Sverige,58.6/16.183332">   <img class="img-position-top" src="Icon/paraply.png" alt=""> </a>
+
+                 <h2 class="date" >2015-09-04 19:32  </h2>
+
+                 <p class="message" > Hallå där! <br> Min päls är genomsur av allt regn, <br> ta in mig och torka av mig #mjau  </p>
+
+                 <img class="img-responsive" class="img-position" src="css/bubble.png" alt="bubbla">
+
+            </div>
+
+
+            </div>
+        </div>
+
+          <div class="container">
+
+        <div class="row" >
+            <div class="col-md-6">
+
+                 <img class="img-responsive" id="imageCat" src="image10.jpg" alt="" >
+
+            </div>
+            <div class="col-md-6" style="border-style:none;" >
+
+            <div style="static">
+         <a href="http://www.smhi.se/#ort=2688368,Norrk%C3%B6ping,Norrk%C3%B6ping,Sverige,58.6/16.183332"> <img class="img-position-top" src="Icon/flinga.png" alt=""> </a>
+
+                 <h2 class="date" >2015-09-04 19:32  </h2>
+
+                 <p class="message" > Mina tassar fryser snart till is av all snö, <br> öppna åt mig! #mjau  </p>
+
+                 <img class="img-responsive" class="img-position" src="css/bubble.png" alt="bubbla">
+
+            </div>
+
+
+            </div>
+        </div>
+
+          <div class="container">
+
+        <div class="row" >
+            <div class="col-md-6">
+
+                 <img class="img-responsive" id="imageCat" src="image13.jpg" alt="" >
+
+            </div>
+            <div class="col-md-6" style="border-style:none;" >
+
+            <div style="static">
+               <a href="http://www.smhi.se/#ort=2688368,Norrk%C3%B6ping,Norrk%C3%B6ping,Sverige,58.6/16.183332">     <img class="img-position-top" src="Icon/kallt.png" alt=""> </a>
+
+                 <h2 class="date" >2015-09-04 19:32  </h2>
+
+                 <p class="message" > Det är jättekallt ute, <br> jag vill in till värmen #mjau </p>
+
+                 <img class="img-responsive" class="img-position" src="css/bubble.png" alt="bubbla">
+
+            </div>
+
 
             </div>
         </div>
